@@ -49,6 +49,7 @@ TablePopupMenu.deleterows=Delete Rows
 TablePopupMenu.insertrow=Insert Row
 TablePopupMenu.paste=Paste
 TablePopupMenu.selectall=Select All
+TablePopupMenu.selectEntireRows=Select entire row(s)
 TablePopupMenu.print=Print
 
 TextPopupMenu.copy=Copy
